v0.0.1/modules/schema/pages/class/ConnectDisconnectFunction.adoc
= `ConnectDisconnectFunction`
:toclevels: 4


+++A function that will disconnect and reconnect the customer's load under defined conditions.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ConnectDisconnectFunction`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetFunction.adoc[`AssetFunction`]
*** xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]
**** *`ConnectDisconnectFunction`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ConnectDisconnectFunction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



RemoteConnectDisconnectInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Switch {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



EndDevice {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Register {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




ConnectDisconnectFunction -> RemoteConnectDisconnectInfo: rcdInfo


ConnectDisconnectFunction -> Switch: Switches


ConnectDisconnectFunction -> EndDevice: EndDevice


ConnectDisconnectFunction -> Register: Registers


ConnectDisconnectFunction -> Asset: Asset


ConnectDisconnectFunction -> DiagramObject: DiagramObjects


ConnectDisconnectFunction -> InstanceSet: InstanceSet


ConnectDisconnectFunction -> Name: Names


ConnectDisconnectFunction -> ChangeSetMember: PropertiesCIMDataObject


ConnectDisconnectFunction -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<eventCount,`eventCount`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Running cumulative count of connect or disconnect events, for the lifetime of this function or until the value is cleared.+++

| <<isConnected,`isConnected`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if this function is in the connected state.+++

| <<isDelayedDiscon,`isDelayedDiscon`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If set true, the switch may disconnect the service at the end of a specified time delay after the disconnect signal has been given. If set false, the switch may disconnect the service immediately after the disconnect signal has been given. This is typically the case for over current circuit-breakers which are classified as either instantaneous or slow acting.+++

| <<isLocalAutoDisconOp,`isLocalAutoDisconOp`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If set true and if disconnection can be operated locally, the operation happens automatically. Otherwise it happens manually.+++

| <<isLocalAutoReconOp,`isLocalAutoReconOp`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If set true and if reconnection can be operated locally, then the operation happens automatically. Otherwise, it happens manually.+++

| <<isRemoteAutoDisconOp,`isRemoteAutoDisconOp`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If set true and if disconnection can be operated remotely, then the operation happens automatically. If set false and if disconnection can be operated remotely, then the operation happens manually.+++

| <<isRemoteAutoReconOp,`isRemoteAutoReconOp`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If set true and if reconnection can be operated remotely, then the operation happens automatically. If set false and if reconnection can be operated remotely, then the operation happens manually.+++

| <<rcdInfo,`rcdInfo`>>
| 0..1
| xref::class/RemoteConnectDisconnectInfo.adoc[`RemoteConnectDisconnectInfo`]
| +++Information on remote connect disconnect switch.+++

| <<Switches,`Switches`>>
| 0..*
| xref::class/Switch.adoc[`Switch`]
| n/a

| <<Asset,`Asset`>>
| 0..1
| xref::class/Asset.adoc[`Asset`]
| +++Asset on which this function can be performed.+++

| <<EndDevice,`EndDevice`>>
| 0..1
| xref::class/EndDevice.adoc[`EndDevice`]
| +++End device that performs this function.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<configID,`configID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Configuration specified for this function.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the function is enabled.+++

| <<firmwareID,`firmwareID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Firmware version.+++

| <<hardwareID,`hardwareID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Hardware version.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<password,`password`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Password needed to access this function.+++

| <<programID,`programID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of program.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<Registers,`Registers`>>
| 0..*
| xref::class/Register.adoc[`Register`]
| +++All registers for quantities metered by this end device function.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Asset]
=== `Asset`
+++Asset on which this function can be performed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#configID]
=== `configID`
+++Configuration specified for this function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.configID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++True if the function is enabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

//[discrete]
[#EndDevice]
=== `EndDevice`
+++End device that performs this function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.EndDevice`
| Cardinality
| 0..1
| Type
| xref::class/EndDevice.adoc[`EndDevice`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

//[discrete]
[#eventCount]
=== `eventCount`
+++Running cumulative count of connect or disconnect events, for the lifetime of this function or until the value is cleared.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.eventCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#firmwareID]
=== `firmwareID`
+++Firmware version.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.firmwareID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#hardwareID]
=== `hardwareID`
+++Hardware version.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.hardwareID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#isConnected]
=== `isConnected`
+++True if this function is in the connected state.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isConnected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#isDelayedDiscon]
=== `isDelayedDiscon`
+++If set true, the switch may disconnect the service at the end of a specified time delay after the disconnect signal has been given. If set false, the switch may disconnect the service immediately after the disconnect signal has been given. This is typically the case for over current circuit-breakers which are classified as either instantaneous or slow acting.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isDelayedDiscon`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#isLocalAutoDisconOp]
=== `isLocalAutoDisconOp`
+++If set true and if disconnection can be operated locally, the operation happens automatically. Otherwise it happens manually.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isLocalAutoDisconOp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#isLocalAutoReconOp]
=== `isLocalAutoReconOp`
+++If set true and if reconnection can be operated locally, then the operation happens automatically. Otherwise, it happens manually.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isLocalAutoReconOp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#isRemoteAutoDisconOp]
=== `isRemoteAutoDisconOp`
+++If set true and if disconnection can be operated remotely, then the operation happens automatically. If set false and if disconnection can be operated remotely, then the operation happens manually.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isRemoteAutoDisconOp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#isRemoteAutoReconOp]
=== `isRemoteAutoReconOp`
+++If set true and if reconnection can be operated remotely, then the operation happens automatically. If set false and if reconnection can be operated remotely, then the operation happens manually.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isRemoteAutoReconOp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#password]
=== `password`
+++Password needed to access this function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.password`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#programID]
=== `programID`
+++Name of program.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.programID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#rcdInfo]
=== `rcdInfo`
+++Information on remote connect disconnect switch.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.rcdInfo`
| Cardinality
| 0..1
| Type
| xref::class/RemoteConnectDisconnectInfo.adoc[`RemoteConnectDisconnectInfo`]


|===

//[discrete]
[#Registers]
=== `Registers`
+++All registers for quantities metered by this end device function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.Registers`
| Cardinality
| 0..*
| Type
| xref::class/Register.adoc[`Register`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

//[discrete]
[#Switches]
=== `Switches`


[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.Switches`
| Cardinality
| 0..*
| Type
| xref::class/Switch.adoc[`Switch`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


