v1.1.0/modules/schema/pages/class/ConnectDisconnectFunction.adoc
= `ConnectDisconnectFunction`
:toclevels: 4


+++A function that will disconnect and reconnect the customer's load under defined conditions.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ConnectDisconnectFunction`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetFunction.adoc[`AssetFunction`]
*** xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]
**** *`ConnectDisconnectFunction`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Switches,`Switches`>>
//| [[slots_table.Switches]]<<Switches,`Switches`>>
| 0..* +
xref::class/Switch.adoc[`Switch`]
| _n/a_
| _n/a_

| <<eventCount,`eventCount`>>
//| [[slots_table.eventCount]]<<eventCount,`eventCount`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Running cumulative count of connect or disconnect events, for the lifetime of this function or until the value is cleared.+++
| _n/a_

| <<isConnected,`isConnected`>>
//| [[slots_table.isConnected]]<<isConnected,`isConnected`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if this function is in the connected state.+++
| _n/a_

| <<isDelayedDiscon,`isDelayedDiscon`>>
//| [[slots_table.isDelayedDiscon]]<<isDelayedDiscon,`isDelayedDiscon`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If set true, the switch may disconnect the service at the end of a specified time delay after the disconnect signal has been...+++
| _n/a_

| <<isLocalAutoDisconOp,`isLocalAutoDisconOp`>>
//| [[slots_table.isLocalAutoDisconOp]]<<isLocalAutoDisconOp,`isLocalAutoDisconOp`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If set true and if disconnection can be operated locally, the operation happens automatically. Otherwise it happens manually.+++
| _n/a_

| <<isLocalAutoReconOp,`isLocalAutoReconOp`>>
//| [[slots_table.isLocalAutoReconOp]]<<isLocalAutoReconOp,`isLocalAutoReconOp`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If set true and if reconnection can be operated locally, then the operation happens automatically. Otherwise, it happens manually.+++
| _n/a_

| <<isRemoteAutoDisconOp,`isRemoteAutoDisconOp`>>
//| [[slots_table.isRemoteAutoDisconOp]]<<isRemoteAutoDisconOp,`isRemoteAutoDisconOp`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If set true and if disconnection can be operated remotely, then the operation happens automatically. If set false and if...+++
| _n/a_

| <<isRemoteAutoReconOp,`isRemoteAutoReconOp`>>
//| [[slots_table.isRemoteAutoReconOp]]<<isRemoteAutoReconOp,`isRemoteAutoReconOp`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If set true and if reconnection can be operated remotely, then the operation happens automatically. If set false and if...+++
| _n/a_

| <<rcdInfo,`rcdInfo`>>
//| [[slots_table.rcdInfo]]<<rcdInfo,`rcdInfo`>>
| 0..1 +
xref::class/RemoteConnectDisconnectInfo.adoc[`RemoteConnectDisconnectInfo`]
| +++Information on remote connect disconnect switch.+++
| _n/a_

| <<EndDevice,`EndDevice`>>
//| [[slots_table.EndDevice]]<<EndDevice,`EndDevice`>>
| 0..1 +
xref::class/EndDevice.adoc[`EndDevice`]
| +++End device that performs this function.+++
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]

| <<Registers,`Registers`>>
//| [[slots_table.Registers]]<<Registers,`Registers`>>
| 0..* +
xref::class/Register.adoc[`Register`]
| +++All registers for quantities metered by this end device function.+++
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the function is enabled.+++
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]

| <<Asset,`Asset`>>
//| [[slots_table.Asset]]<<Asset,`Asset`>>
| 0..1 +
xref::class/Asset.adoc[`Asset`]
| +++Asset on which this function can be performed.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<configID,`configID`>>
//| [[slots_table.configID]]<<configID,`configID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Configuration specified for this function.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<firmwareID,`firmwareID`>>
//| [[slots_table.firmwareID]]<<firmwareID,`firmwareID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Firmware version.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<hardwareID,`hardwareID`>>
//| [[slots_table.hardwareID]]<<hardwareID,`hardwareID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Hardware version.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<password,`password`>>
//| [[slots_table.password]]<<password,`password`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Password needed to access this function.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<programID,`programID`>>
//| [[slots_table.programID]]<<programID,`programID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Name of program.+++
| xref::class/AssetFunction.adoc[`AssetFunction`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Asset]
=== `Asset`
+++Asset on which this function can be performed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.Asset,&#10548;>>
--
////


//[discrete]
[#configID]
=== `configID`
+++Configuration specified for this function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.configID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.configID,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++True if the function is enabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#EndDevice]
=== `EndDevice`
+++End device that performs this function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.EndDevice`
| Cardinality
| 0..1
| Type
| xref::class/EndDevice.adoc[`EndDevice`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

////
[.text-left]
--
<<slots_table.EndDevice,&#10548;>>
--
////


//[discrete]
[#eventCount]
=== `eventCount`
+++Running cumulative count of connect or disconnect events, for the lifetime of this function or until the value is cleared.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.eventCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.eventCount,&#10548;>>
--
////


//[discrete]
[#firmwareID]
=== `firmwareID`
+++Firmware version.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.firmwareID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.firmwareID,&#10548;>>
--
////


//[discrete]
[#hardwareID]
=== `hardwareID`
+++Hardware version.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.hardwareID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.hardwareID,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isConnected]
=== `isConnected`
+++True if this function is in the connected state.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isConnected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isConnected,&#10548;>>
--
////


//[discrete]
[#isDelayedDiscon]
=== `isDelayedDiscon`
+++If set true, the switch may disconnect the service at the end of a specified time delay after the disconnect signal has been given. If set false, the switch may disconnect the service immediately after the disconnect signal has been given. This is typically the case for over current circuit-breakers which are classified as either instantaneous or slow acting.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isDelayedDiscon`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isDelayedDiscon,&#10548;>>
--
////


//[discrete]
[#isLocalAutoDisconOp]
=== `isLocalAutoDisconOp`
+++If set true and if disconnection can be operated locally, the operation happens automatically. Otherwise it happens manually.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isLocalAutoDisconOp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isLocalAutoDisconOp,&#10548;>>
--
////


//[discrete]
[#isLocalAutoReconOp]
=== `isLocalAutoReconOp`
+++If set true and if reconnection can be operated locally, then the operation happens automatically. Otherwise, it happens manually.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isLocalAutoReconOp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isLocalAutoReconOp,&#10548;>>
--
////


//[discrete]
[#isRemoteAutoDisconOp]
=== `isRemoteAutoDisconOp`
+++If set true and if disconnection can be operated remotely, then the operation happens automatically. If set false and if disconnection can be operated remotely, then the operation happens manually.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isRemoteAutoDisconOp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isRemoteAutoDisconOp,&#10548;>>
--
////


//[discrete]
[#isRemoteAutoReconOp]
=== `isRemoteAutoReconOp`
+++If set true and if reconnection can be operated remotely, then the operation happens automatically. If set false and if reconnection can be operated remotely, then the operation happens manually.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.isRemoteAutoReconOp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isRemoteAutoReconOp,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#password]
=== `password`
+++Password needed to access this function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.password`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.password,&#10548;>>
--
////


//[discrete]
[#programID]
=== `programID`
+++Name of program.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.programID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

////
[.text-left]
--
<<slots_table.programID,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#rcdInfo]
=== `rcdInfo`
+++Information on remote connect disconnect switch.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.rcdInfo`
| Cardinality
| 0..1
| Type
| xref::class/RemoteConnectDisconnectInfo.adoc[`RemoteConnectDisconnectInfo`]


|===

////
[.text-left]
--
<<slots_table.rcdInfo,&#10548;>>
--
////


//[discrete]
[#Registers]
=== `Registers`
+++All registers for quantities metered by this end device function.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.Registers`
| Cardinality
| 0..*
| Type
| xref::class/Register.adoc[`Register`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

////
[.text-left]
--
<<slots_table.Registers,&#10548;>>
--
////


//[discrete]
[#Switches]
=== `Switches`



[cols="h,4",width=65%]
|===
| URI
| `cim:ConnectDisconnectFunction.Switches`
| Cardinality
| 0..*
| Type
| xref::class/Switch.adoc[`Switch`]


|===

////
[.text-left]
--
<<slots_table.Switches,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Switch.adoc[`Switch`] | xref::class/Switch.adoc#ConnectDisconnectFunctions[`ConnectDisconnectFunctions`]


|===

